--- a/produtos/templates/altimagemprod.html
+++ b/produtos/templates/altimagemprod.html
@@ -3,7 +3,7 @@
 
 {% block 'titulo' %}iMercado - Alterar imagem de produto{% endblock %}
 {% block 'head' %}
-
+    <link rel="stylesheet" type="text/css" href="{% static 'produtos/css/estilo.css' %}">
 {% endblock %}
 
 {% block 'conteudo' %}
