--- a/categorias/templates/editarcategoria.html
+++ b/categorias/templates/editarcategoria.html
@@ -2,23 +2,30 @@
 {% load static %}
 
 {% block 'titulo' %}iMercado - Editar categoria{% endblock %}
+{% block 'head' %}
+    <link rel="stylesheet" type="text/css" href="{% static 'categorias/css/estilo.css' %}">
+{% endblock %}
 {% block 'conteudo' %}
 <main>
     <h1>Editar Categoria {{cat.id}}</h1>
     
-    <form action="{% url 'categorias:editarcategoriabd' %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="categoria_id" value="{{cat.id}}">
-        <label>Nome:</label>
-        <input type="text"  value="{{cat.nome}}" name="ncategoria" id="ncategoria">
-        <!--class="form-control"-->
-        <label>Descrição:</label>
-        <input type="text" id="dcategoria" value="{{cat.descricao}}" name="dcategoria" ></input>
-
-        <input type="submit" value="Salvar" class="btn btn-success edcat">
-        <a href="{% url 'categorias:vercategoria' cat.id %}" class="btn btn-danger">Cancelar</a>
-
-    </form>
+    <div class="com-borda">
+        <div class="col-md">
+            <form action="{% url 'categorias:editarcategoriabd' %}" method="post">
+                {% csrf_token %}
+                <input type="hidden" name="categoria_id" value="{{cat.id}}">
+                <label>Nome:</label>
+                <input class="form-control" type="text"  value="{{cat.nome}}" name="ncategoria" id="ncategoria">
+                <!--class="form-control"-->
+                <label>Descrição:</label>
+                <input type="text" class="form-control ultimo-elemento" id="dcategoria" value="{{cat.descricao}}" name="dcategoria" ></input>
+                <div class="botoes">
+                    <input type="submit" value="Salvar" class="btn btn-success edcat">
+                    <a href="{% url 'categorias:vercategoria' cat.id %}" class="btn btn-danger">Cancelar</a>
+                </div>
+            </form>
+        </div>
+    </div>
 
     
 </main>
