--- a/templates/static/fornecedores/css/estilo.css
+++ b/templates/static/fornecedores/css/estilo.css
@@ -37,3 +37,16 @@ body a:hover{
 ul li{
     font-size: 20px;
 }
+
+.imagem{
+    width: 100px;
+    height: 100px;
+    border:1px solid rgb(215, 215, 164)
+}
+
+.centro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
