--- a/templates/static/produtos/css/estilo.css
+++ b/templates/static/produtos/css/estilo.css
@@ -37,3 +37,17 @@ body a:hover{
 ul li{
     font-size: 20px;
 }
+
+.imagem{
+    width: 100px;
+    height: 100px;
+    border:1px solid rgb(215, 215, 164)
+}
+
+.ultimo-elemento{
+    margin-bottom: 25px;
+}
+
+div.ultimo-elemento{
+    margin-bottom: 100px;
+}
